--- a/app/src/main/res/layout/fragment_reg_address1.xml
+++ b/app/src/main/res/layout/fragment_reg_address1.xml
@@ -1,17 +1,17 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#ffffff"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.farmerapp.Fragments.RegisterPhotoFragment">
+    tools:context="com.example.farmerapp.Fragments.RegistrationFragments.RegisterAddress1Fragment">
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="309dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="#ffffff"
+        android:layout_gravity="center"
+        android:background="@color/white"
+        android:layout_marginHorizontal="50dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="4dp">
 
@@ -22,15 +22,16 @@
             <EditText
                 android:id="@+id/address_1"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:maxLines="4"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
                 android:background="@drawable/reglayout"
                 android:hint="Address Line 1"
-                android:textSize="13sp"
-                android:textColor="#000000"
-                android:textColorHint="#c7c7c7"
+                android:textSize="16sp"
+                android:paddingVertical="10dp"
+                android:paddingHorizontal="25dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/grey"
                 android:layout_marginHorizontal="25dp"
-                android:paddingHorizontal="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -41,15 +42,16 @@
             <EditText
                 android:id="@+id/address_2"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:maxLines="3"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
                 android:background="@drawable/reglayout"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:hint="Address Line 2"
-                android:textSize="13sp"
-                android:textColorHint="#c7c7c7"
+                android:textSize="16sp"
+                android:textColorHint="@color/grey"
                 android:layout_marginHorizontal="25dp"
-                android:paddingHorizontal="20dp"
+                android:paddingHorizontal="25dp"
+                android:paddingVertical="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -60,14 +62,15 @@
             <EditText
                 android:id="@+id/landmark"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:maxLines="3"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
                 android:background="@drawable/reglayout"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:hint="Landmark (Optional)"
-                android:textSize="13sp"
-                android:textColorHint="#c7c7c7"
-                android:paddingHorizontal="20dp"
+                android:textSize="16sp"
+                android:textColorHint="@color/grey"
+                android:paddingHorizontal="25dp"
+                android:paddingVertical="10dp"
                 android:layout_marginHorizontal="25dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Address"
-                android:textColor="#ffffff"
+                android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@id/address_gradient"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -116,13 +119,14 @@
                 app:layout_constraintVertical_bias="0.5" />
             <Button
                 android:id="@+id/next"
-                android:layout_width="120dp"
-                android:layout_height="48dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Next"
                 android:textColor="@color/white"
                 android:background="@drawable/roundbutton"
                 android:enabled="false"
                 android:alpha="0.3"
+                android:paddingHorizontal="30dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
