--- a/app/src/main/res/layout/activity_verify_otp.xml
+++ b/app/src/main/res/layout/activity_verify_otp.xml
@@ -95,7 +95,9 @@
         android:onClick="resendOTP"
         android:enabled="false"
         android:alpha="0.2"
-        android:layout_marginTop="10dp"
+        android:paddingVertical="5dp"
+        android:paddingHorizontal="10dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
