--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -2,17 +2,17 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/textgradient">
     <TextView
         android:id="@+id/selcted_place"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="25dp"
         android:text="Place Selected"
-        android:layout_centerInParent="true"
+        android:paddingVertical="10dp"
         android:textColor="@color/white"
-        android:textSize="14sp"/>
+        android:textSize="16sp"/>
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
