--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="black">#000000</color>
     <color name="grey">#aeaeae</color>
     <color name="blue">#4ea0e7</color>
+    <color name="blueLight">#14b8ff</color>
 </resources>
