--- a/app/src/main/res/layout/crop_item_layout.xml
+++ b/app/src/main/res/layout/crop_item_layout.xml
@@ -13,7 +13,6 @@
         android:id="@+id/crop_image"
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        android:src="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -37,13 +36,10 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/ic_check"
-        tools:layout_editor_absoluteX="226dp"
-        tools:layout_editor_absoluteY="3dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.95"
-        app:layout_constraintVertical_bias="0.00"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.98"
+        app:layout_constraintVertical_bias="0.1"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
