--- a/app/src/main/res/layout/fragment_reg_photo.xml
+++ b/app/src/main/res/layout/fragment_reg_photo.xml
@@ -47,6 +47,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/photo"
             app:layout_constraintVertical_bias="0.0" />
+        <TextView
+            android:id="@+id/skip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Skip"
+            android:textColor="@color/grey"
+            android:layout_marginLeft="10dp"
+            android:padding="10dp"
+            app:layout_constraintBottom_toBottomOf="@id/next"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toRightOf="@+id/next"
+            app:layout_constraintTop_toTopOf="@id/next"
+            app:layout_constraintVertical_bias="0.75"/>
+
 
 
 
