--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/gradient"
     tools:context=".Activities.SplashActivity">
     <LinearLayout
         android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=" HAAT"
-            android:textColor="@color/grey"
+            android:textColor="@color/white"
             android:textSize="35sp"
             android:textStyle="bold"
             />
