--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -13,7 +13,8 @@
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/image"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/profile"
