--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -59,6 +59,7 @@
                 app:layout_constraintVertical_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -72,6 +73,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -86,6 +88,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Mr"
+                        android:textColor="@color/colorPrimary"
                         android:textSize="15sp"
                         android:background="@drawable/boundary_green_back"
                         android:layout_weight="1"
@@ -96,6 +99,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="100"
                         android:text="Name"
+                        android:maxLines="1"
                         android:textSize="15sp"
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/grey"
@@ -161,11 +165,13 @@
                     <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="20"
+                        android:layout_weight="100"
                         android:text="8488998888 (Alternate No.)"
+                        android:maxLines="1"
+                        android:inputType="phone"
                         android:textSize="15sp"
                         android:textColor="@color/grey"
-                        android:paddingVertical="10dp"
+                        android:paddingVertical="8dp"
                         android:paddingHorizontal="25dp"
                         android:background="@drawable/boundary_grey_back"/>
                     <ImageView
@@ -190,8 +196,9 @@
                     <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="20"
+                        android:layout_weight="100"
                         android:text="XXXXXXXX (Optional)"
+                        android:maxLines="1"
                         android:textSize="15sp"
                         android:textColor="@color/grey"
                         android:paddingVertical="10dp"
@@ -219,7 +226,7 @@
                     <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="20"
+                        android:layout_weight="100"
                         android:text="Address"
                         android:gravity="start"
                         android:minLines="3"
