--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,20 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
+        <include
+            layout="@layout/offers_temporary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintVertical_bias="0.0"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toTopOf="@+id/gradient"
+            app:layout_constraintBottom_toBottomOf="@id/gradient"
+            app:layout_constraintRight_toRightOf="@id/gradient"
+            app:layout_constraintLeft_toLeftOf="@id/gradient">
+
+        </include>
         <LinearLayout
+            android:id="@+id/ll"
             android:layout_marginHorizontal="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -50,6 +63,91 @@
                 android:layout_weight="1"
                 android:layout_marginLeft="10dp"
                 android:layout_marginBottom="20dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/ll"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintVertical_bias="0.0">
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="85dp"
+                app:cardCornerRadius="25dp"
+                app:cardElevation="4dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/vege"
+                        android:scaleType="centerCrop"/>
+                    <TextView
+                        android:layout_width="218dp"
+                        android:layout_height="match_parent"
+                        android:text="Sell Vegetables"
+                        android:textSize="20sp"
+                        android:textColor="@color/white"
+                        android:paddingLeft="20dp"
+                        android:gravity="center_vertical"
+                        android:background="@drawable/curved_back"/>
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="85dp"
+                android:layout_marginTop="20dp"
+                app:cardCornerRadius="25dp"
+                app:cardElevation="4dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/fruits"
+                        android:scaleType="centerCrop"/>
+                    <TextView
+                        android:layout_width="218dp"
+                        android:layout_height="match_parent"
+                        android:text="Sell Fruits"
+                        android:textSize="20sp"
+                        android:textColor="@color/white"
+                        android:paddingLeft="20dp"
+                        android:gravity="center_vertical"
+                        android:background="@drawable/curved_back"/>
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="85dp"
+                android:layout_marginTop="20dp"
+                app:cardCornerRadius="25dp"
+                app:cardElevation="4dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/vege"
+                        android:scaleType="centerCrop"/>
+                    <TextView
+                        android:layout_width="218dp"
+                        android:layout_height="match_parent"
+                        android:text="Sell Crops"
+                        android:textSize="20sp"
+                        android:textColor="@color/white"
+                        android:paddingLeft="20dp"
+                        android:gravity="center_vertical"
+                        android:background="@drawable/curved_back"/>
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
