--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,150 +4,217 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f3f3f3"
     tools:context=".Fragments.MainFragments.HomeFragment">
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white">
-        <ImageView
-            android:id="@+id/gradient"
+        android:layout_height="match_parent">
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:src="@drawable/gradient"
-            app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_height="match_parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-        <include
-            layout="@layout/offers_temporary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintVertical_bias="0.0"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toTopOf="@+id/gradient"
-            app:layout_constraintBottom_toBottomOf="@id/gradient"
-            app:layout_constraintRight_toRightOf="@id/gradient"
-            app:layout_constraintLeft_toLeftOf="@id/gradient">
-
-        </include>
-        <LinearLayout
-            android:id="@+id/ll"
-            android:layout_marginHorizontal="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="175dp"
-            app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
-            <androidx.appcompat.widget.SearchView
+            android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/gradient"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@drawable/gradient"
+                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+            <include
+                layout="@layout/offers_temporary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:iconifiedByDefault="false"
-                android:elevation="10dp"
-                android:layout_weight="50"
+                app:layout_constraintVertical_bias="0.0"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toTopOf="@+id/gradient"
+                app:layout_constraintBottom_toBottomOf="@id/gradient"
+                app:layout_constraintRight_toRightOf="@id/gradient"
+                app:layout_constraintLeft_toLeftOf="@id/gradient">
+
+            </include>
+            <LinearLayout
+                android:id="@+id/ll"
+                android:layout_marginHorizontal="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="175dp"
+                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
+                <androidx.appcompat.widget.SearchView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:iconifiedByDefault="false"
+                    android:elevation="10dp"
+                    android:layout_weight="50"
+                    android:layout_marginBottom="20dp"
+                    app:queryBackground="@drawable/searchbar_back"
+                    android:background="@drawable/searchbar_back"
+                    app:defaultQueryHint="Search vegetables"/>
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/searchbar_back"
+                    android:src="@drawable/ic_gps"
+                    android:padding="12dp"
+                    android:elevation="10dp"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="20dp" />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/sell_ll"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="30dp"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@+id/ll"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintVertical_bias="0.0">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="85dp"
+                    app:cardCornerRadius="25dp"
+                    app:cardElevation="4dp">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/vege"
+                            android:scaleType="centerCrop"/>
+                        <TextView
+                            android:layout_width="218dp"
+                            android:layout_height="match_parent"
+                            android:text="Sell Vegetables"
+                            android:textSize="20sp"
+                            android:textColor="@color/white"
+                            android:paddingLeft="20dp"
+                            android:gravity="center_vertical"
+                            android:background="@drawable/curved_back"/>
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="85dp"
+                    android:layout_marginTop="20dp"
+                    app:cardCornerRadius="25dp"
+                    app:cardElevation="4dp">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/fruits"
+                            android:scaleType="centerCrop"/>
+                        <TextView
+                            android:layout_width="218dp"
+                            android:layout_height="match_parent"
+                            android:text="Sell Fruits"
+                            android:textSize="20sp"
+                            android:textColor="@color/white"
+                            android:paddingLeft="20dp"
+                            android:gravity="center_vertical"
+                            android:background="@drawable/curved_back"/>
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="85dp"
+                    android:layout_marginTop="20dp"
+                    app:cardCornerRadius="25dp"
+                    app:cardElevation="4dp">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/vege"
+                            android:scaleType="centerCrop"/>
+                        <TextView
+                            android:layout_width="218dp"
+                            android:layout_height="match_parent"
+                            android:text="Sell Crops"
+                            android:textSize="20sp"
+                            android:textColor="@color/white"
+                            android:paddingLeft="20dp"
+                            android:gravity="center_vertical"
+                            android:background="@drawable/curved_back"/>
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/suggested_crops_recylerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="#e8e8e8"
                 android:layout_marginBottom="20dp"
-                app:queryBackground="@drawable/searchbar_back"
-                android:background="@drawable/searchbar_back"
-                app:defaultQueryHint="Search vegetables"/>
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:background="@drawable/searchbar_back"
-                android:src="@drawable/ic_gps"
-                android:padding="12dp"
-                android:elevation="10dp"
-                android:layout_weight="1"
-                android:layout_marginLeft="10dp"
-                android:layout_marginBottom="20dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/suggest_text"/>
+            <TextView
+                android:id="@+id/suggest_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Suggested For You"
+                android:textColor="#616161"
+                android:textSize="12sp"
+                android:background="#e8e8e8"
+                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/sell_ll"
+                android:layout_marginTop="20dp"
+                android:paddingHorizontal="10dp"
+                android:paddingTop="5dp"/>
+
+
+            <pl.droidsonroids.gif.GifImageView
+                android:id="@+id/load"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/load"
+                app:layout_constraintBottom_toBottomOf="@id/suggested_crops_recylerview"
+                app:layout_constraintRight_toRightOf="@+id/suggested_crops_recylerview"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintLeft_toLeftOf="@id/suggested_crops_recylerview"
+                app:layout_constraintTop_toTopOf="@id/suggested_crops_recylerview"
+                app:layout_constraintVertical_bias="0.0"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
-            android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/ll"
+            android:src="@drawable/ic_shopping_cart"
+            android:backgroundTint="@color/colorPrimary"
+            app:layout_constraintVertical_bias="1"
+            app:layout_constraintHorizontal_bias="1"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintVertical_bias="0.0">
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="85dp"
-                app:cardCornerRadius="25dp"
-                app:cardElevation="4dp">
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/vege"
-                        android:scaleType="centerCrop"/>
-                    <TextView
-                        android:layout_width="218dp"
-                        android:layout_height="match_parent"
-                        android:text="Sell Vegetables"
-                        android:textSize="20sp"
-                        android:textColor="@color/white"
-                        android:paddingLeft="20dp"
-                        android:gravity="center_vertical"
-                        android:background="@drawable/curved_back"/>
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="85dp"
-                android:layout_marginTop="20dp"
-                app:cardCornerRadius="25dp"
-                app:cardElevation="4dp">
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/fruits"
-                        android:scaleType="centerCrop"/>
-                    <TextView
-                        android:layout_width="218dp"
-                        android:layout_height="match_parent"
-                        android:text="Sell Fruits"
-                        android:textSize="20sp"
-                        android:textColor="@color/white"
-                        android:paddingLeft="20dp"
-                        android:gravity="center_vertical"
-                        android:background="@drawable/curved_back"/>
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="85dp"
-                android:layout_marginTop="20dp"
-                app:cardCornerRadius="25dp"
-                app:cardElevation="4dp">
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/vege"
-                        android:scaleType="centerCrop"/>
-                    <TextView
-                        android:layout_width="218dp"
-                        android:layout_height="match_parent"
-                        android:text="Sell Crops"
-                        android:textSize="20sp"
-                        android:textColor="@color/white"
-                        android:paddingLeft="20dp"
-                        android:gravity="center_vertical"
-                        android:background="@drawable/curved_back"/>
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintTop_toTopOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
