--- a/app/src/main/res/layout/sell_crops_item_layout.xml
+++ b/app/src/main/res/layout/sell_crops_item_layout.xml
@@ -22,6 +22,7 @@
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/ll_1"
         android:layout_width="wrap_content"
@@ -56,7 +57,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginVertical="10dp"
         android:layout_marginLeft="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/ll_1"
@@ -72,9 +73,18 @@
             android:src="@drawable/ic_add_40dp"
             android:background="@drawable/add_crop_back"
             android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/count"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:text="2"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:gravity="center"
+            android:background="@drawable/count_back"/>
         <ImageView
             android:id="@+id/minus"
-            android:layout_marginTop="10dp"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@drawable/ic_remove"
