--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -26,6 +26,7 @@
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:onClick="onBackClick"
             android:src="@drawable/ic_arrow_back_50dp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="15dp"/>
