--- a/app/src/main/res/layout/activity_request_detail.xml
+++ b/app/src/main/res/layout/activity_request_detail.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
+            android:onClick="onBackClick"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/ic_arrow_back_50dp"
@@ -44,6 +45,7 @@
         android:requiresFadingEdge="vertical"
         android:fadingEdgeLength="50dp">
         <RelativeLayout
+            android:id="@+id/rl_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
@@ -79,14 +81,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Slot"
-                    android:textSize="20sp"
+                    android:textSize="17sp"
                     android:textColor="#616161"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/slot_status"
                     android:text="Confirmed"
-                    android:textSize="20sp"
+                    android:textSize="17sp"
                     android:layout_marginLeft="10dp"/>
             </LinearLayout>
             <TextView
@@ -95,8 +97,7 @@
                 android:text="date"
                 android:id="@+id/date"
                 android:textColor="#424242"
-                android:textSize="18sp"
-                android:lineHeight="24sp"
+                android:textSize="17sp"
                 android:layout_marginTop="5dp"
                 android:layout_below="@+id/slot_ll"
                 android:gravity="center_horizontal"/>
@@ -106,7 +107,7 @@
                 android:text="slot"
                 android:id="@+id/slot"
                 android:textColor="#a1a1a1"
-                android:textSize="17sp"
+                android:textSize="16sp"
                 android:lineHeight="22sp"
                 android:layout_marginTop="5dp"
                 android:layout_below="@+id/date"
@@ -187,5 +188,11 @@
         android:layout_alignParentBottom="true"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="25dp"/>
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@id/load"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/load"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
