--- a/app/src/main/res/layout/activity_sell.xml
+++ b/app/src/main/res/layout/activity_sell.xml
@@ -50,6 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <ImageView
+            android:onClick="onBackClick"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/ic_arrow_back_50dp"
